# Thakir-Prayer-Times

./: CMakeLists.txt  README.md  about.cpp  about.h  about.ui  io.github.hafmed.Thakir-Prayer-Times.desktop  io.github.hafmed.Thakir-Prayer-Times.metainfo-old.xml  io.github.hafmed.Thakir-Prayer-Times.metainfo.xml  io.github.hafmed.Thakir-Prayer-Times.yaml  main.cpp  mainold.cpp  thakir_prayer_times.cpp  thakir_prayer_times.h  thakir_prayer_times.ui  thakir_prayer_timesold.cpp  thakir_prayer_timesold.h  thakir_prayer_timesold.ui
android-sources/: AndroidManifest.xml  build.gradle
